Introduce yComp printer